--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,9 @@
     "angular-ui-router": "^0.2.15",
     "font-awesome": "~4.3.0",
     "ng-file-upload": "~4.2.4",
-    "ng-file-upload-shim": "~4.2.4"
+    "ng-file-upload-shim": "~4.2.4",
+    "jquery-bridget": "~1.1.0",
+    "angular-masonry": "~0.11.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
